# oneteam

./: .gitignore  Info.plist  LICENSE  MPL1.1  Makefile  NOTES.txt  README.txt  application.ini  build.pl  chrome.manifest  install.rdf
chrome/: chrome.manifest
chrome/icons/default/: default.icns  default.xpm
chrome/messenger/content/: about.xul  account.xul  addContact.xul  bookmarkRoom.xul  changeNick.xul  changeNickname.xul  changePriority.xul  command.xul  console.xul  disco.xul  editContact.xul  fileTransferRequest.xul  fileTransfers.xul  fileTransfert.xul  gui.xul  history.xul  historyWeb.xul  info.xul  invitation.xul  invite.xul  joinRoom.xul  joinRoomError.xul  main.xul  manageBookmarks.xul  messenger.xul  muc.xul  myInfo.xul  notification.xul  preferences.xul  presenceProfiles.xul  removeContact.xul  rename.xul  renameGroup.xul  roomConfiguration.xul  roomWizard.xul  settings.xul  status.xul  subscribe.xul  subscribed.xul  unsubscribe.xul  (+1 more)
chrome/oneteam/branding/: brand.dtd  brand.properties
chrome/oneteam/content/: about.xul  account.xul  addContact.xul  adhoc.xul  bookmarkRoom.xul  bumpPriority.xul  changeNick.xul  changePassword.xul  changeSubject.xul  chats.xul  command.xul  console.xul  disco.xul  editContact.xul  fileTransferRequest.xul  fileTransfers.xul  hiddenWindow.xul  history.xul  historyWeb.xul  info.xul  initiateChat.xul  invitation.xul  invite.xul  inviteByMail.xul  inviteToRoom.xul  jingleCall.xul  joinRoom.xul  joinRoomError.xul  main.xul  manageBookmarks.xul  muc.xul  (+19 more)
components/: oneteam.js  oneteam.xpt
componentsSrc/: .gitignore  Makefile  conf.mk.example  config.mk  deps.mk  rules.mk
componentsSrc/idl/: Makefile.in  otIIdle.idl  otISystray.idl
componentsSrc/soundsPlayer/: build.sh  player.as
componentsSrc/src/: Makefile.in
componentsSrc/tools/: libtoolize.pl
content/: Login.xul  gui.xul  joinRoom.xul
content/JavaScript/: Login.js  gui.js  messenger.js
defaults/preferences/: non-build.js  pref.js  xulapp.js  xulrunner.js
docs/: url-params.txt  web-file-send-protocol.txt
extension/: .gitignore  Makefile  chrome.manifest  install.rdf
extension/components/: otcompanion.js  otcompanion.xpt
extension/componentsSrc/: .gitignore  Makefile
extensions/{88bf52fd-951f-433d-9fc9-6228c93aba98}/: install.rdf
installer/windows/: MPL.rtf  OneTeamSetup.nsi
lagger/: README.txt  TODO.txt  application.ini  messenger
lagger/chrome/: chrome.manifest
lagger/components/: xpidle.xpt
locale/en-US/: contents.rdf  messenger.dtd
locale/fr-FR/: messenger.dtd
po/: chef.po  es.po  fr.mo  fr.po  oneteam.pot  pl.po  update-po.sh
po/branding/: es.po  fr.mo  fr.po  oneteam.pot  pl.po
src/components/: .gitignore  CMakeLists.txt  Makefile
src/components/cmake/: FindXPCOM.cmake  HideSymbols.cmake
src/components/config/: config.mk  deps.mk  libtoolize.pl  rules.mk
src/components/idl/: Makefile.in  otIAudio.idl  otICodec.idl  otIDNSService.idl  otIDispatcher.idl  otIICE.idl  otIIdle.idl  otIJNRelay.idl  otIOSXBadge.idl  otIPipeline.idl  otIRTP.idl
src/components/libs/libilbc/: CMakeLists.txt  Makefile.in  iLBC_decode.h  iLBC_define.h  iLBC_encode.h
src/components/libs/libnice/: .gitignore  CMakeLists.txt  Makefile.am  autogen.sh  config.h.cmake  config.h.in  configure.ac
src/components/libs/libnice/agent/: agent.c  agent.h  candidate.c  candidate.h  conncheck.c  discovery.c  discovery.h  pseudotcp.c
src/components/libs/libnice/socket/: socket.c  socket.h  turn.h
src/components/libs/libspeex/: .gitignore  CMakeLists.txt  autogen.sh  config.h.cmake
src/components/libs/libspeex/include/speex/: speex_config_types.h.cmake
src/components/libs/libspeex/libspeex/: arch.h  os_support.h  scal.c  speex.c
src/components/libs/libsrtp/: .gitignore  config_in.h
src/components/libs/libsrtp/crypto/include/: datatypes.h  err.h  stamp-h1
src/components/src/: Makefile.in
src/components/src/audio/: Makefile.in  otAudio.h  otAudioFilter.cpp  otAudioFilter.h  otMacAudio.cpp  otMacAudio.h  otMacAudioStream.cpp  otMacAudioStream.h  otPulseAudio.cpp  otPulseAudio.h  otPulseAudioStream.cpp  otPulseAudioStream.h  otWinAudio.cpp  otWinAudio.h  otWinAudioStream.cpp  otWinAudioStream.h  system-headers
src/components/src/codecs/: Makefile.in  g711.c  g711.h  otCodecInfo.cpp  otCodecInfo.h  otG711.cpp  otG711.h  otG711Decoder.cpp  otG711Encoder.cpp  otILBC.cpp  otILBC.h  otILBCDecoder.cpp  otILBCEncoder.cpp  otSpeex.cpp  otSpeex.h  otSpeexDecoder.cpp  otSpeexEncoder.cpp
src/components/src/debug/: otDebug.h
src/components/src/dns/: Makefile.in  otDNS.h  otDNSBase.cpp  otDNSBase.h  otDNSUnix.cpp  otDNSUnix.h  otDNSWin.cpp  otDNSWin.h
src/components/src/ice/: Makefile.in  otICE.h  otICECandidate.cpp  otICECandidate.h  otICEService.cpp  otICEService.h  otICESession.cpp  otICESession.h
src/components/src/idle/: Makefile.in  otIdle.h  otIdleUnix.h  otIdleWin.cpp  otIdleWin.h
src/components/src/jnrelay/: Makefile.in  otJNRelay.cpp  otJNRelay.h
src/components/src/osxbadge/: Makefile.in  otOSXBadge.h  otOSXBadge.mm
src/components/src/rtp/: Makefile.in  otRTP.cpp  otRTP.h  otRTPDecoder.cpp  otRTPEncoder.cpp
src/components/src/speex/: Makefile.in  otCodecInfo.cpp  otCodecInfo.h  otSpeex.cpp  otSpeexDecoder.cpp
src/components/src/systray/: Makefile.in  otPr0nObserver.cpp  otPr0nObserver.h  otSystray.h  otSystrayGtk2.cpp  otSystrayGtk2.h  otSystrayWin.cpp  otSystrayWin.h
src/components/src/systray/includes/: gfxASurface1_9_2.h  gfxIFormats1_9.h  gfxIImageFrame1_9.h  gfxImageSurface1_9_2.h  gfxtypes1_9.h  imgIContainer1_9_2.h  imgIContainerObserver1_9.h  imgIContainerObserver1_9_2.h  imgIDecoderObserver1_9.h  imgIDecoderObserver1_9_2.h  imgIRequest1_9.h  nsIDOMHTMLImageElement1_9_2.h  nsIDOMHTMLImageElement2_0.h  nsIImageLoadingContent1_9.h  nsIImageLoadingContent1_9_2.h
tools/: autoup.pl  gen.sh  genChef.pl  make-partial-mar.pl  update.cgi  updatePOT.pl
tools/compile/: .gitignore  config.mk  deps.mk  rules.mk
web/: .gitignore  bridge.html  index.html  indexMUC.html  oneteam.js  serverPrefs.dat.example
web/sounds/: player.swf
(+442 files in other folders)
